home overflow hidden to avoid hoizontal scroll

--- a/app/assets/stylesheets/components/_mecano_card.scss
+++ b/app/assets/stylesheets/components/_mecano_card.scss
@@ -1,5 +1,4 @@
 .mecano-card{
-  transition: border-color 0.3s ease;
   transition: background-color 0.3s ease;
   border: 0.5px solid rgb(230,230,230);
   cursor: pointer;
