--- a/app/assets/stylesheets/components/_titles.scss
+++ b/app/assets/stylesheets/components/_titles.scss
@@ -3,20 +3,20 @@ h2{
   border-bottom: 8px solid #008bc6;
   padding-bottom: 2px;
   line-height: 1.2em;
-  font-size: 2.4em;
+  font-size: 2.1em;
   margin: 30px 0px;
 }
 
 h3 {
-  font-size: 2em
+  font-size: 1.9em
 }
 
 h4 {
-  font-size: 1.8em
+  font-size: 1.7em
 }
 
 h5 {
-  font-size: 1.64em
+  font-size: 1.56em
 }
 
 h6 {
